[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "woosh"
version = "0.1.1"
description = "Woosh Sound Effect Foundation model (Sony AI)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
# license-files = ["LICEN[CS]E*"]
keywords = ["genai", "flow matching", "sound", "sfx"]
dependencies = [
  "einops>=0.8.1",
  "hydra-core>=1.3.2",
  "lightning>=2.5.6",
  "timm>=1.0.22",
  "torch==2.8.0",
  "torchaudio==2.8.0",
  "torchvision==0.23.0",
  "numpy<2",  # Jetson torch wheels are built against NumPy 1.x (ABI)
  "torchdiffeq>=0.2.5",
  "transformers>=4.57.2",
  "hear21passt==0.0.26",
  "pydantic>=2.12.4",
  "omegaconf>=2.3.0",
  "av>=16.1.0",
  "requests",
  "gradio[mcp]>=6.9.0",
]

# This deployment targets Jetson Orin (JetPack 6 / CUDA 12.6, Python 3.10).
# torch/torchaudio/torchvision are served by the Jetson AI Lab index (see
# [tool.uv.sources] / [[tool.uv.index]] below) so `uv sync`/`uv run` produce a
# CUDA-enabled build. NumPy is pinned <2 to match the Jetson torch ABI.
[tool.uv]
# to avoid installing dependencies like:
# pip install hear21passt --no-dependencies
dependency-metadata = [
  { name = "hear21passt", version = "0.0.26", requires-dist = [
  ] },
]
default-groups = "all"

[tool.uv.sources]
torch = [{ index = "jetson-cu126" }]
torchvision = [{ index = "jetson-cu126" }]
torchaudio = [{ index = "jetson-cu126" }]

[[tool.uv.index]]
name = "jetson-cu126"
url = "https://pypi.jetson-ai-lab.io/jp6/cu126/+simple/"
explicit = true

[dependency-groups]
api = ["fastapi>=0.124.4", "uvicorn>=0.38.0"]
reaper = [
    "httpx>=0.28.1",
    "python-reapy>=0.10.0",
]
audioio = ["soundfile>=0.13.1"]
demo = ["gradio>=6"]
dev = ["ipykernel", "ipython", "ruff>=0.14.6"]
